--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -28,7 +28,7 @@
                     <group>
                         <group>
                             <field name="carrier_id" attrs="{'readonly':[('is_read_only','=',True)]}"/>
-                            <field name="tracking_ref" required="1" attrs="{'readonly':[('is_read_only','=',True)]}"/>
+<!--                            <field name="tracking_ref" required="1" attrs="{'readonly':[('is_read_only','=',True)]}"/>-->
                             <field name="shipment_date" required="1" attrs="{'readonly':[('is_read_only','=',True)]}"/>
                         </group>
                         <group>
@@ -77,11 +77,11 @@
         <field name="arch" type="xml">
             <tree string="Purchase Tracking Tree" create="0">
                 <field name="name"/>
-                <field name="tracking_ref" required="1"/>
+<!--                <field name="tracking_ref" required="1"/>-->
                 <field name="shipment_date" required="1" optional="show"/>
                 <field name="carrier_id" optional="show"/>
                 <field name="pro_number" optional="show"/>
-                <field name="status" optional="hide"/>
+                <field name="status" optional="show"/>
             </tree>
         </field>
     </record>
