--- a/bista_purchase/views/stock_picking_views.xml
+++ b/bista_purchase/views/stock_picking_views.xml
@@ -10,7 +10,7 @@
                 <field name="applicable_tracking_ids" invisible="1"/>
                 <field name="purchase_tracking_id" options="{'no_create':1}"
                        attrs="{'invisible':[('picking_type_code','!=','incoming')], 'readonly':[('state','in',['done','cancel'])]}"
-                       domain="[('id', 'in', applicable_tracking_ids)]"/>
+                       domain="[('id', 'in', applicable_tracking_ids)]" context="{'shipping_selection':1}"/>
             </xpath>
             <xpath expr="//page[@name='note']" position="after">
                 <page name="nuances" string="Nuances">
