--- a/bista_purchase/report/purchase_backorder_view.xml
+++ b/bista_purchase/report/purchase_backorder_view.xml
@@ -165,7 +165,7 @@
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">bista_purchase.report_purchase_backorder</field>
         <field name="report_file">bista_purchase.report_purchase_backorder</field>
-        <field name="binding_model_id" ref="stock.model_stock_picking"/>
+        <!-- <field name="binding_model_id" ref="stock.model_stock_picking"/> -->
         <field name="binding_type">report</field>
     </record>
 
