--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -195,21 +195,19 @@
                         </group>
                     </group>
                 </page>
-                <page name="shipment_tracking" string="Shipment Tracking"
-                      attrs="{'invisible':[('state','not in',['purchase','done'])]}">
+                <page name="shipment_tracking" string="Shipment Tracking" attrs="{'invisible': [('state', 'not in', ['purchase', 'done'])]}">
                     <button name="open_tracking" type="object" string="Create Tracking" class="btn btn-primary" />
-                    <field name="purchase_tracking_ids" readonly="1">
+                    <field name="purchase_tracking_ids" options="{'no_create': True, 'no_open': True}">
                         <tree string="Purchase Tracking Tree">
-                            <field name="name" readonly="1"/>
-                            <field name="shipment_date" required="1" optional="show" readonly="1"/>
-                            <field name="carrier_id" optional="show" readonly="1"/>
-                            <field name="pro_number" optional="show" readonly="1"/>
-                            <field name="status" optional="show" readonly="1"/>
-                            <field name="dest_address_id" invisible="1"/>
-                            <button name="edit_tracking_line" icon="fa-edit" type="object" class="btn-link"
-                                    style="float:right"/>
+                            <field name="name" readonly="1" />
+                            <field name="shipment_date" required="1" optional="show" readonly="1" />
+                            <field name="carrier_id" optional="show" readonly="1" />
+                            <field name="pro_number" optional="show" readonly="1" />
+                            <field name="status" optional="show" readonly="1" />
+                            <field name="dest_address_id" invisible="1" />
+                            <button name="edit_tracking_line" icon="fa-edit" type="object" class="btn-link" style="float: right" />
                             <button name="send_email" string="Send Email" type="object" class="btn-primary"
-                                    attrs="{'invisible': ['|', ('dest_address_id', '=', False), ('status', 'in', ['received', 'on_hold'])]}"/>
+                                attrs="{'invisible': ['|', ('dest_address_id', '=', False), ('status', 'in', ['received', 'on_hold'])]}" />
                         </tree>
                     </field>
                 </page>
